--- a/client/app.json
+++ b/client/app.json
@@ -27,7 +27,19 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "The app needs access to your photos so you can share them with your friends."
+        }
+      ],
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "The app needs access to your camera so you can take pictures."
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
