feat: use react trpc client, rename `./client/expo` to `.client/mobile`

--- a/client/mobile/app.json
+++ b/client/mobile/app.json
@@ -13,7 +13,12 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSAppTransportSecurity": {
+          "NSAllowsArbitraryLoads": true
+        }
+      }
     },
     "android": {
       "adaptiveIcon": {
@@ -26,7 +31,7 @@
       "output": "static"
     },
     "plugins": [
-      "expo-router",
+      ["expo-router", { "root": "./src/app" }],
       [
         "expo-image-picker",
         {
